# CRM_14

./: .cursorrules  .editorconfig  .env.example  .gitignore  AGENTS.md  AI.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  test.md  test3.txt  textliza.txt
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260406_0001_postgres_rbac.py
backend/app/: main.py
backend/app/api/: contacts.py
backend/app/application/: dtos.py  ports.py
backend/app/application/use_cases/: create_lead.py  delete_lead.py  export_leads.py  get_lead.py  list_leads.py  list_stages.py  move_stage.py  update_lead.py
backend/app/core/: auth.py  config.py  deps.py  errors.py  logging.py  sentinels.py
backend/app/db/: models.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/domain/: entities.py  enums.py  rules.py
backend/app/domain/models/: contact.py
backend/app/infrastructure/memo/: repo.py
backend/app/infrastructure/onec/: repo.py  repo_stub.py  test.py
backend/app/infrastructure/sql/: __init__.py  db.py  models.py  repo.py
backend/app/repositories/: contacts_repo.py
backend/app/schemas/: contact.py
backend/app/services/: contact_service.py
backend/leetbook_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_contacts_api.py  test_smoke_memo.py  test_stage_transition.py
docs/: index.md  (+2 more)
(+104 files in other folders)
