[project]
name = "mini_crm_simple"
version = "0.1.0"
description = "Clean architecture FastAPI mini CRM with pluggable storage adapters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
  "anyio>=4.4.0,<5.0.0",
  "httpx>=0.28.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
